static/styles.css
/* ... */
.btn-control {
    position: absolute;
    top: 50%;
    /* border: 1px solid #000; */
    background-color: rgba(47, 43, 43, 0.3);
    /* padding: 5px 10px; */
    /* opacity: .5; */
    transform: translateY(-50%);
    z-index: 7;
}
.btn-control .fa-angle-right, .btn-control .fa-angle-left {
    background-color: rgba(47, 43, 43, 0.3);
    padding: 5px 10px;
    font-size: 24px;
    /* border: 3px solid #ffffff; */
}
.btn-control > i {
    color: #fff;
}
.prev-btn {
    left: 4px;
}
.next-btn {
    right: 4px;
}
.btn-control:hover {
    background-color: rgba(7, 7, 7, 0.7);
    transition: .3s;
    cursor: pointer;
}

/* INDEX CSS */
h1 {
    margin: 18px 0;
}

.compare-container {
    display: flex;
    justify-content: space-around;
}

.compare-box {
    display: block;
    position: relative;
    width: 40%;
    min-width: 220px;
    min-height: 220px;
    padding-top: 40%;
    background-color: #ffffff;
    background-position: center;
    background-size: cover;
    z-index: 2;
}

.index-img-movie {
    background-image: url(./cinema.jpg);
}
.index-img-show {
    background-image: url(./show.jpg);
}

.overlay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    padding-top: 100%;
    opacity: 0;
    background-color: #000;
    z-index: -1;
}

.compare-p {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(51, 46, 46, 0.5);
    color: #ffffff;
    font-size: 3rem;
    text-align: center;
    padding: 4px 12px;
    z-index: 2;
    transition: .3s;
}

.compare-box:hover .compare-p {
    background-color: rgba(0, 0, 0, 0.7);
    transition: .3s;
}.compare-box:hover .overlay {
    background-color: rgb(0, 0, 0);
    opacity: 1;
    transition: .3s;
    z-index: 1;
}

.random-container {
    /* margin: auto; */
    width: 80%;
    display: flex;
    justify-content: center;
    gap: 16px;
}

.random-box {
    min-width: 350px;
    display: flex;
    justify-content: space-between;
    width: 45%;
    background-color: #e4d6a6
    /* border: 1px solid #000; */
}

.random-box-title, .random-box-content {
    width: 50%;
    height: 300px;
    position: relative;
}

.random-poster-img {
    width: 100%;
    margin-right: 0;
    height: inherit;
}
.random-box-title {
    background-image: url(./simone-secci-49uySSA678U-unsplash.jpg);
    background-position: center;
    background-size: contain;
    transform: translateX(-50%);
    left: 50%;
    z-index: 4;
    transition: 1s;
}
.random-box-title .compare-p {
    top: 15%;
    font-size: 2rem;
    background-color: rgba(128, 115, 115, 0.5);
    width: 150px;
    transition: 1s;
}
.random-box-content {
    transform: translateX(50%);
    right: 50%;
    opacity: 0;
    transition: 1s;
}
.random-box-content > .carousel-item-p {
    color: #fff;
    background-color: rgba(24, 24, 24, 0.7);
}

.random-box:hover {
    cursor: pointer;
}
.random-box:hover .random-box-title {
    left: 25%;
    transition: 1s;
}
.random-box:hover .random-box-content {
    right: 25%;
    opacity: 1;
    transition: 1s;
}
.random-box:hover .compare-p {
    background-color: rgba(128, 115, 115, 0);
    transition: 1s;
    color: rgba(128, 115, 115, 0);
}
.vote-round {
    background-color: transparent;
}

.top-container {
    min-width: 320px;
    width: 80%;
    display: flex;
    justify-content: center;
    gap: 24px;
    /* border: 1px solid #000; */
}

.top-box {
    position: relative;
    min-width: 320px;
    width: 45%;
    height: 0;
    min-height: 200px;
    padding-top: 25%;
    /* border: 1px solid #000; */
    background-position: top center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: none;
    transition: .5s;
}

.top-p {
    position: absolute;
    font-size: 3rem;
    background-color: rgba(0, 0, 0, 0.5);
    transition: .5s;
}

.top-box-movies {
    background-image: url(./Best-Movies.jpg);
    transition: .5s;
}
.top-box-shows {
    background-image: url(./Best-TV-Shows.jpg);
    transition: .5s;
}

.top-box > .overlay {
    padding: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 1);
    opacity: 0;
    z-index: 2;
    transition: .5s;
}
.top-box:hover .top-p {
    /* background-color: rgba(128, 115, 115, .5); */
    background-color: rgba(0, 0, 0, 1);
    transition: .5s;
}
.top-box:hover > .overlay {
    /* background-color: rgba(228, 222, 222, 0.2); */
    background-color: rgba(0, 0, 0, 1);
    opacity: 1;
    transition: .5s;
}


/* REGISTER AND LOGIN*/
.register-form {
    max-width: 300px;
    margin: 100px auto;
    display: flex;
    flex-direction: column;
    gap: 16px;
}
.register-input, .login-input {
    width: 250px;
    border: 1px solid #f1a782;
    background-color: #fff;
    padding: 8px 12px;
    border-radius: 6px;
}
.register-form > .btn, .login-form > .btn {
    margin: auto;
    width: fit-content;
}
/* #loginChild {
    display: none;
    position: relative;
} */
.login-form {
    position: static;
    transform: none;
    max-width: 400px;
    margin: auto;
    padding: 36px;
    display: flex;
    flex-direction: column;
    gap: 16px;
    border-radius: 4px;
}
.login-form > .btn {
    margin-top: 16px;
}

.form-field {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.error-message {
    margin: 4px 0 0 32px;
    align-self: flex-start;
    color: red;
    font-size: 12px;
}

.success-message {
    position: fixed;
    /* transform: translate(-50%, -50%); */
    top: 30px;
    right: 30px;
    /* color: green; */
    background-color: #e4d6a6;
    z-index: 99999;
    padding: 24px 48px;
    font-size: 18px;
    transition:  opacity 0.5s ease;
}

.success-message.hidden {
    display: none;
}

.attribution {
    width: 200px;
}

td {
    /* margin: 24px; */
    border: 1px solid #000;
    padding: 8px;
}

.table-season-class {
    display: none;
}
/* ... */

